<resources>
    <string name="app_name">¿Qué restaurante elijo?</string>
    <string name="tv_act1">Bienvenido a la aplicación ¿Qué restaurante elijo?</string>
    <string name="btn_acc_act2">ACCEDER</string>
    <string name="tv_intro_act2">Hola %1$s , introduce los datos de los dos restaurantes entre los que  quieres elegir.</string>
    <string name="btn_intro_datos1">INTRODUCIR DATOS RESTAURANTE 1</string>
    <string name="btn_intro_datos2">INTRODUCIR DATOS RESTAURANTE 2</string>
    <string name="btn_calcular">CALCULAR SELECCIÓN DE RESTAURANTE</string>
    <string name="tv_intro_act_datos">Por favor %1$s, introduce los datos del %2$s restaurante</string>
    <string name="tv_datos_nombre">Nombre:</string>
    <string name="tv_datos_tel">Teléfono:</string>
    <string name="et_nombre_res">Introduce el nombre del restaurante</string>
    <string name="et_tel_res">Introduce el teléfono</string>
    <string name="tv_datos_web">Web:</string>
    <string name="et_web_res">Introduce la web</string>
    <string name="tv_datos_dis">Distancia:</string>
    <string name="et_dis_res">Introduce la distancia en km</string>
    <string name="tv_indicador_trafico">Indicador de tráfico:</string>
    <string name="rdbtn_poco">Poco</string>
    <string name="rdbtn_normal">Normal</string>
    <string name="rdbtn_mucho">Mucho</string>
    <string name="btn_aceptar_datos_res">ACEPTAR</string>
    <string name="btn_cancelar_datos_res">CANCELAR</string>
    <string name="tv_nombre">Nombre: %1$s</string>
    <string name="tv_web">Web: %1$s</string>
    <string name="tv_tel">Telf: %1$s</string>
    <string name="toastResNull">Debe introducir los datos del restaurante %1$s</string>
    <string name="res_primero">primer</string>
    <string name="res_segundo">segundo</string>
    <string name="toastVacio">Debe introducir todos los datos</string>
    <string name="tv_nombre2">Nombre: %1$s</string>
    <string name="tv_tel2">Web: %1$s</string>
    <string name="tv_web2">Telf: %1$s</string>
    <string name="btn_llamar">LLAMAR</string>
    <string name="tv_intro_final">%1$s, el restaurante al que tardarás menos en ir es:</string>
    <string name="tv_tel_final">Tel: %1$s</string>
    <string name="tv_web_final">Web: %1$s</string>
    <string name="btn_web_final">VISITAR WEB</string>
    <string name="tv_dis_final">Distancia: %1$s km</string>
    <string name="tv_tiempo_final">Tiempo estimado: %1$s min</string>
    <string name="btn_reiniciar">VOLVER A EMPEZAR</string>
</resources>